tests/NormalTests/paczka1/fuzzy1/53805289.err
Error in line 2: 1uGW51 S726 81,4
Error in line 4: 1uGW51 A316 78,1
Error in line 21: GiaZYRU A>77 >3,9
Error in line 18: 5LXXeP S726 90,7
Error in line 25: A177 S726 324,k
Error in line 23: GiaZYRU A177 25,3
Error in line 20: A177 S726 74,7
Error in line 36: iLHVw A177 33,39
Error in line 26: GiaZYRU S726 83,1
Error in line 24: 5LXXeP A177 40,0
